various css fixes taking tchevalier and goofy feedback into account, keep using a sandstone like design but make it better aligned and more happy

--- a/web/style/new_glossary.css
+++ b/web/style/new_glossary.css
@@ -18,7 +18,6 @@
 }
 
 body {
-    background-image: linear-gradient(to bottom, #D7D3C8 0%, #F6F4EC 100%);
     color: #333333;
     font-family: 'Open Sans',sans-serif;
     font-size: 14px;
@@ -27,6 +26,12 @@ body {
     padding: 50px 0.5em 0.5em 0.5em;
     position: relative;
     width: 98%;
+    background-color: #CADDED;
+    background-image: url("/img/grain.png"), linear-gradient(to bottom, #CADDED 0%, #F6F4EC 100%);
+    background-origin: padding-box, padding-box;
+    background-position: 0 0px, 0 0px, 0 0;
+    background-repeat: repeat;
+    background-size: auto auto, auto auto, auto auto;
 }
 
 a, a:visited {
@@ -77,8 +82,10 @@ div#current {
 }
 
 div#current strong {
-    display: block;
+    display: inline-block;
     padding: 0 0.5em;
+    border-left: 1px solid darkgray;
+    margin-left: 0.5em;
     color: orange;
 }
 
@@ -103,7 +110,8 @@ div#current strong {
 }
 
 form[name="searchform"] {
-    
+    width: 1014px;
+    margin: auto;
 }
 
 fieldset {
@@ -115,10 +123,6 @@ fieldset {
 
 fieldset {
     margin-top: 0.5em;
-}
-
-input[type="text"] {
-    min-width: 80%;
 }
 
 .searchedTerm {
@@ -133,17 +137,16 @@ table {
 }
 
 tr:nth-child(odd) {
-    background-color: #FFFFFF;
+    background-color: rgba(255,255,255,0.6);
+}
+
+tr:nth-child(even) {
+    background-color: rgba(255,255,255,0.9);
 }
 
 tr:first-child, #channelcomp tr:nth-child(2) {
     background-color: transparent;
     box-shadow: none;
-}
-
-tr:nth-child(even) {
-    background-color: #F9F9F9;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1) inset;
 }
 
 th {
@@ -152,7 +155,9 @@ th {
 
 td, #stats th {
     padding: 0.5em;
+/*
     border: 1px solid #CCCCCC;
+*/
     font-size: 0.9em;
     vertical-align: top;
 }
@@ -255,8 +260,10 @@ input[type=submit] {
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
     transition: all 0.25s linear 0s;
 }
+
 #root input[type=submit] {
     margin-top: 0;
+    width: 150px;
 }
 
 input[type=submit]:hover {
@@ -272,7 +279,7 @@ fieldset#main select {
 }
 
 fieldset#main #search {
-    margin: 0 10px;
+    margin: 0;
 }
 
 fieldset#main #search input[type=text] {
@@ -287,11 +294,14 @@ fieldset#main #search input[type=text] {
     height: 20px;
     padding: 5px 7px;
     transition: all 0.1s linear 0s;
+    width: 820px;
 }
 
-fieldset#main fieldset {
+#root fieldset#main fieldset {
     margin-bottom: 0.5em;
     vertical-align: top;
+    min-height: 5em;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 fieldset#main fieldset * {
